<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_hacker_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_share"
            android:title="Chat" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_guide_book"
            android:title="@string/guid" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/test" />
        <item
            android:id="@+id/nav_rule_of_thumb"
            android:icon="@drawable/ic_rule_of_thumb"
            android:title="@string/rule" />


    </group>
    <item android:title="@string/acc">
        <menu>
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_logout_icon"
                android:title="@string/logo"
                />
        </menu>
    </item>

</menu>
